[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
dashmap = "6"
futures-core = "0.3"
garde = "0.20"
k8s-openapi = { version = "0.22", features = ["latest"] }
kube = "0.93"
schemars = "0.8"
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
