[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
bytemuck = "1"
const-sub-array = "0.1"
garde = "0.20"
k8s-openapi = { version = "0.22", features = ["latest"] }
kube = "0.93"
schemars = "0.8"
serde = "1"
serde_json = "1"
static_assertions = "1"
thiserror = "1"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
