[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
bytemuck = "1"
color-eyre = "0.6"
const-sub-array = "0.1"
derivative = "2"
envfury = "0.2"
futures = "0.3"
garde = "0.20"
k8s-openapi = { version = "0.22", features = ["latest"] }
kube = "0.93"
netlink-packet-route = "0.19"                             # must be `rtnetlink`-compatible
rtnetlink = "0.14"
schemars = "0.8"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
static_assertions = "1"
thiserror = "1"
tokio = { version = "1", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
