[package]
name = "crd"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.cargo-machete]
ignored = ["serde_json"]

[dependencies]
garde = { workspace = true, features = ["derive", "serde"] }
k8s-openapi = { workspace = true, features = ["schemars"] }
kube = { workspace = true, features = ["derive"] }
schemars = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
