[package]
name = "main"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
crd-controller = { path = "../crd-controller" }
pcp-client = { path = "../pcp-client" }
pcp-client-tokio = { path = "../pcp-client-tokio" }
pcp-consts = { path = "../pcp-consts" }
route = { path = "../route" }

color-eyre = { workspace = true }
envfury = { workspace = true }
kube = { workspace = true, features = ["runtime"] }
tokio = { workspace = true, default-features = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
